Use base64 to take query string into encoded path